# huginn

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  go.mod  main.c  setup.sh
c_src/: wakeonlan.c  wakeonlan.h
cmd/huginn/: main.go
internal/wakeonlan/: wol.go  wol_test.go
old/: Makefile  main.c  setup.sh
old/src/: subscriber.c  subscriber.h  wakeonlan.c  wakeonlan.h
scripts/: test_send.sh
src/: main.rs  subscriber.c  subscriber.h  wakeonlan.c  wakeonlan.h
