[package]
name = "huginn"
version = "0.1.0"
edition = "2021"

[dependencies]
bindgen = "0.69.4"
mqtt = "0.1.4"
rumqttc = "0.24.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69.4"
